--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/undead.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/undead.yml
@@ -7,7 +7,7 @@
   components:
   - type: HTN
     rootTask:
-      task: SimpleHostileCompound
+      task: CP14JustAttackingHostileCompound
     blackboard:
       NavClimb: !type:Bool
         true
