--- a/Resources/Prototypes/_CP14/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/_CP14/Damage/modifier_sets.yml
@@ -35,3 +35,13 @@
     Heat: 0.8
     Cold: 1.4
     Poison: 0.8
+
+- type: damageModifierSet
+  id: CP14LittleInsects
+  coefficients:
+    Blunt: 0.0
+    Slash: 0.0
+    Piercing: 0.0
+    Heat: 1.2
+    Cold: 0.9
+    Poison: 0.2
