--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
@@ -140,3 +140,82 @@
     sprite: _CP14/Effects/dirt.rsi
     layers:
     - state: dirt1
+
+- type: entity
+  id: CP14MobMonsterMosquito
+  parent: [ SimpleMobBase, FlyingMobBase ]
+  name: bloodworm mosquitoes
+  description: A bloodthirsty swarm of small mosquitoes just waiting for a soft flesh for a bloody feast.
+  categories: [ ForkFiltered ]
+  components:
+  - type: HTN
+    rootTask:
+      task: CP14JustAttackingHostileCompound
+    blackboard:
+      VisionRadius: !type:Single
+        8
+      AggroVisionRadius: !type:Single
+        7
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: Sprite
+    drawdepth: Mobs
+    layers:
+    - sprite: _CP14/Mobs/Monster/mosquito.rsi
+      state: mosquitos
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.30
+        density: 5
+        mask:
+        - FlyingMobMask
+        layer:
+        - FlyingMobLayer
+        - Opaque
+  - type: ReplacementAccent
+    accent: xeno
+  - type: Damageable
+    damageContainer: Biological
+    damageModifierSet: CP14LittleInsects
+  - type: Appearance
+  - type: Body
+    prototype: Bloodsucker
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      10: Dead
+  - type: Stamina
+    critThreshold: 50
+  - type: CombatMode
+  - type: MeleeWeapon
+    animation:
+    angle: 0
+    damage:
+      types:
+        Piercing: 1
+        Bloodloss: 1
+    soundHit:
+        path: /Audio/Effects/bite.ogg
+  - type: MovementSpeedModifier
+    baseWalkSpeed: 2.5
+    baseSprintSpeed: 2.5
+  - type: Grammar
+    attributes:
+      gender: epicene
+  - type: AmbientSound
+    volume: -4
+    range: 5
+    sound:
+      path: /Audio/_CP14/Animals/swarm.ogg
+  - type: Destructible
+    thresholds:
+      - trigger:
+          !type:DamageTrigger
+          damage: 10
+        behaviors:
+          - !type:DoActsBehavior
+            acts: [ "Destruction" ]
