mana consume, and mana glove

--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/tools.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/tools.yml
@@ -31,3 +31,48 @@
     state: icon
   - type: Item
     sprite: _CP14/Objects/Specific/Thaumaturgy/ritual_chalk.rsi 
+
+- type: entity
+  id: CP14ManaOperationGlove
+  parent: 
+  - BaseItem
+  - CP14BaseWeaponLight
+  - CP14BaseWeaponShort
+  name: mana glove
+  description: "An unsophisticated but aesthetically pleasing blend of technology and magic crystals that allows you to operate with raw mana: siphoning it from some objects and pumping it into others."
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/Specific/Thaumaturgy/powerline_gauntlet.rsi
+    state: icon
+  - type: Item
+    size: Normal
+    shape:
+    - 0,0,0,1
+    storedRotation: -45
+    sprite: _CP14/Objects/Specific/Thaumaturgy/powerline_gauntlet.rsi 
+  - type: CP14MagicEnergyContainer
+    magicAlert: CP14MagicEnergy
+    maxEnergy: 50
+    energy: 0
+  - type: CP14MagicEnergyExaminable
+  - type: CP14SpellStorageAccessHolding
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellManaGift
+    - CP14ActionSpellManaConsume
+  - type: ThrowingAngle #Fun
+    angle: 225
+  - type: MeleeWeapon
+    angle: 0
+    attackRate: 1.2
+    range: 1.2
+    wideAnimationRotation: 225
+    wideAnimation: CP14WeaponArcThrust
+    damage:
+      types:
+        Blunt: 5
+    soundHit:
+      collection: MetalThud
+    cPAnimationLength: 0.25
+    cPAnimationOffset: -1.3
