--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_consume.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_consume.yml
@@ -1,47 +1,43 @@
 - type: entity
-  id: CP14ActionSpellManaGift
-  name: Mana transfer
-  description: You can transfer a small amount of your magical energy to a target entity or magical object.
+  id: CP14ActionSpellManaConsume
+  name: Mana consume
+  description: You absorb a small amount of mana from the target. 
   components:
   - type: CP14MagicEffect
     magicType: Meta
-    manaCost: 12
+    manaCost: 0
     canModifyManacost: false
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectManaGift
+      - CP14ImpactEffectManaConsume
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectManaGift
-    - !type:CP14SpellApplyEntityEffect
-      effects:
-      - !type:CP14ManaChange
-        manaDelta: 10
-        safe: false
+      - CP14ImpactEffectManaConsume
+    - !type:CP14SpellConsumeManaEffect
+      mana: 10
   - type: CP14MagicEffectSomaticAspect
   - type: CP14MagicEffectCastingVisual
-    proto: CP14RuneManaGift
+    proto: CP14RuneManaConsume
   - type: EntityTargetAction
     whitelist:
       components:
       - CP14MagicEnergyContainer
-      - CP14MagicEnergyCrystalSlot
     itemIconStyle: BigAction
     interactOnMiss: false
-    canTargetSelf: false
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Effects/Magic/spells_icons.rsi
-      state: mana_gift
+      state: mana_consume
     event: !type:CP14DelayedEntityTargetActionEvent
       cooldown: 1
-      castDelay: 1
+      castDelay: 2
+      breakOnMove: true
 
 - type: entity
-  id: CP14RuneManaGift
+  id: CP14RuneManaConsume
   parent: CP14BaseMagicRune
   categories: [ HideSpawnMenu ]
   components:
@@ -57,21 +53,12 @@
       shader: unshaded
 
 - type: entity
-  id: CP14ImpactEffectManaGift
+  id: CP14ImpactEffectManaConsume
   parent: CP14BaseMagicImpact
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     layers:
-    - state: particles_up
+    - state: particles_down
       color: "#5096d4"
       shader: unshaded
-
-- type: entity
-  parent: CP14BaseSpellScrollMeta
-  id: CP14SpellScrollManaGift
-  name: mana gift spell scroll
-  components:
-  - type: CP14SpellStorage
-    spells:
-    - CP14ActionSpellManaGift
