--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -146,6 +146,9 @@ CP14KeyBankSafe4: CP14KeyBankSafe
 CP14KeyBankSafe5: CP14KeyBankSafe
 CP14KeyBankSafe6: CP14KeyBankSafe
 
+#2024-19-11
+CP14ClothingRingManaGift: CP14ManaOperationGlove
+
 # <---> CrystallEdge migration zone end
 
 
