--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
@@ -3,6 +3,9 @@
   name: Fireball
   description: An effective method of destruction - an explosive fireball
   components:
+  - type: Sprite
+    sprite: _CP14/Effects/Magic/spells_icons.rsi
+    state: fireball
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.3
   - type: CP14MagicEffect
