--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -3,6 +3,9 @@
   name: Ice Shards
   description: Fast ice needles, for rapid shooting of targets.
   components:
+  - type: Sprite
+    sprite: _CP14/Effects/Magic/spells_icons.rsi
+    state: ice_shards
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.75
   - type: CP14MagicEffect
