--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -387,3 +387,52 @@
   storage:
     back:
     - CP14BasePickaxe
+
+# Spells
+
+- type: loadoutGroup
+  id: CP14GeneralSpells
+  name: cp14-loadout-general-spells
+  minLimit: 0
+  maxLimit: 2
+  loadouts:
+  - CP14ActionSpellFlameCreation
+  - CP14ActionSpellCureWounds
+  - CP14ActionSpellSphereOfLight
+  - CP14ActionSpellManaConsume
+  - CP14ActionSpellManaGift
+  - CP14ActionSpellShadowGrab
+  - CP14ActionSpellIceDagger
+  - CP14ActionSpellWaterCreation
+
+- type: loadout
+  id: CP14ActionSpellFlameCreation
+  dummyEntity: CP14ActionSpellFlameCreation
+
+- type: loadout
+  id: CP14ActionSpellCureWounds
+  dummyEntity: CP14ActionSpellCureWounds
+
+- type: loadout
+  id: CP14ActionSpellSphereOfLight
+  dummyEntity: CP14ActionSpellSphereOfLight
+
+- type: loadout
+  id: CP14ActionSpellManaConsume
+  dummyEntity: CP14ActionSpellManaConsume
+
+- type: loadout
+  id: CP14ActionSpellManaGift
+  dummyEntity: CP14ActionSpellManaGift
+
+- type: loadout
+  id: CP14ActionSpellShadowGrab
+  dummyEntity: CP14ActionSpellShadowGrab
+
+- type: loadout
+  id: CP14ActionSpellIceDagger
+  dummyEntity: CP14ActionSpellIceDagger
+
+- type: loadout
+  id: CP14ActionSpellWaterCreation
+  dummyEntity: CP14ActionSpellWaterCreation
