--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
@@ -3,6 +3,9 @@
   name: Sphere of Light
   description: Materialization of a bright and safe light source.
   components:
+  - type: Sprite
+    sprite: _CP14/Effects/Magic/spells_icons.rsi
+    state: sphere_of_light
   - type: CP14MagicEffect
     magicType: LightDarkness
     manaCost: 10
@@ -63,7 +66,7 @@
   categories: [ ForkFiltered ]
   components:
   - type: TimedDespawn
-    lifetime: 300 # 5 min
+    lifetime: 180 # 3 min
   - type: Sprite
     sprite: _CP14/Effects/Magic/sphere_of_light.rsi
     noRot: true
@@ -90,8 +93,8 @@
   - type: LandAtCursor
   - type: MovementIgnoreGravity
   - type: PointLight
-    radius: 6.0
-    energy: 2
+    radius: 5.0
+    energy: 1
     color: "#efedff"
   - type: Damageable
   - type: EmitSoundOnLand
