--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -122,11 +122,11 @@ CP14FlowersYellow: CP14Dayflin
 
 #2024-11-03
 CP14OldLantern: CP14CrystalLampBlueEmpty
-CP14ClothingRingIceFloor: CP14ClothingRingManaGift
+CP14ClothingRingIceFloor: CP14ManaOperationGlove
 
 #2024-11-05
 CP14ClothingRingCureWounds: CP14MagicHealingStaff
-CP14ClothingRingShadowStep: CP14ClothingRingManaGift
+CP14ClothingRingShadowStep: null
 
 #2024-11-11
 CP14BlueVial: CP14BlueBottle
@@ -145,6 +145,14 @@ CP14KeyBankSafe3: CP14KeyBankSafe
 CP14KeyBankSafe4: CP14KeyBankSafe
 CP14KeyBankSafe5: CP14KeyBankSafe
 CP14KeyBankSafe6: CP14KeyBankSafe
+
+#2024-19-11
+CP14ClothingRingManaGift: CP14ManaOperationGlove
+CP14ClothingRingIceDagger: CP14ManaOperationGlove
+CP14ClothingRingFlameCreation: null
+CP14ClothingRingShadowGrab: null
+CP14ClothingRingEarthWall: null
+CP14ClothingRingSphereOfLight: null
 
 # <---> CrystallEdge migration zone end
 
