fix liquid drops nefty and suffix

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_water_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T0_water_creation.yml
@@ -46,9 +46,12 @@
 
 - type: entity
   id: CP14LiquidDropWater
-  parent: BaseItem
+  parent: 
+  - BaseItem
+  - ItemHeftyBase
   name: floating liquid drop
   description: A clot of liquid held in the shape of a ball by magic
+  suffix: Water
   categories: [ ForkFiltered ]
   components:
   - type: Item
