--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
@@ -54,6 +54,7 @@
   id: CP14LiquidDropBeer
   parent: CP14LiquidDropWater
   categories: [ ForkFiltered ]
+  suffix: Beer
   components:
   - type: SolutionContainerManager
     solutions:
