melee fire extinguish

--- a/Resources/Prototypes/_CP14/Entities/fire.yml
+++ b/Resources/Prototypes/_CP14/Entities/fire.yml
@@ -6,6 +6,7 @@
   placement:
     mode: SnapgridCenter
   components:
+  - type: Clickable
   - type: Sprite
     drawdepth: Effects
     snapCardinals: true
@@ -75,6 +76,7 @@
     damage:
       types:
         Heat: 0
+  - type: Damageable
   - type: CP14Fireplace
     fuel: 15
   - type: CP14AutoIgnite
