--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -223,6 +223,8 @@
   - type: CP14DemiplaneStabilizer
     requireAlive: true
   - type: CanEnterCryostorage
+  - type: CP14IgnitionModifier
+    ignitionTimeModifier: 2.5
 
 
 - type: entity
