--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -48,6 +48,7 @@
       visible: false
   - type: Cuffable
   - type: Hands
+  - type: ComplexInteraction
   - type: Icon
     sprite: _CP14/Mobs/Species/Zombie/parts.rsi
     state: full
