--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Alchemy/heater.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Alchemy/heater.yml
@@ -53,9 +53,10 @@
     maxItemSize: Normal
     grid:
     - 0,0,2,2
-    blacklist:
+    cP14Ignorelist:
       components:
         - IgnitionSource
+        - CP14DelayedIgnitionSource
   - type: UserInterface
     interfaces:
       enum.StorageUiKey.Key:
