torch integration attempt

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
@@ -139,6 +139,7 @@
         volume: -12
     cPAnimationLength: 0.15
   - type: CP14DelayedIgnitionSource
+    enabled: true
 
 - type: entity
   parent: CP14BaseSpellScrollFire
