--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/torch.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/torch.yml
@@ -9,6 +9,7 @@
     sprite: _CP14/Objects/Tools/torch.rsi
     layers:
       - state: torch-unlit
+        map: ["fuel"]
   - type: Item
     size: Small
   - type: CP14FlammableAmbientSound
@@ -28,11 +29,13 @@
     canResistFire: false
     alwaysCombustible: true
     canExtinguish: true
-    firestacksOnIgnite: 1.0
-    firestackFade: 0.1
+    firestacksOnIgnite: 0.5
     damage:
       types:
-        Heat: 0.03
+        Heat: 0
+  - type: CP14Fireplace
+    maxFuelLimit: 200
+    fuel: 200
   - type: FireVisuals
     sprite: _CP14/Objects/Tools/torch.rsi
     normalState: lit-overlay
@@ -45,7 +48,15 @@
       right:
       - state: lit-inhand-right
         shader: unshaded
+  - type: GenericVisualizer
+    visuals:
+      enum.FireplaceFuelVisuals.Status:
+        fuel:
+          Empty: { state: torch-spent }
+          Medium: { state: torch-unlit }
+          Full: { state: torch-unlit }
   - type: Damageable
+    damageContainer: Inorganic
     damageModifierSet: Wood
   - type: Destructible
     thresholds:
