--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -41,6 +41,14 @@
     - map: [ "head" ]
     - map: [ "pocket1" ]
     - map: [ "pocket2" ]
+    - map: ["enum.HumanoidVisualLayers.Handcuffs"]
+      color: "#ffffff"
+      sprite: Objects/Misc/handcuffs.rsi
+      state: body-overlay-2
+      visible: false
+  - type: Cuffable
+  - type: Hands
+  - type: ComplexInteraction
   - type: Icon
     sprite: _CP14/Mobs/Species/Zombie/parts.rsi
     state: full
@@ -121,6 +129,8 @@
   - type: Climbing
   - type: ReplacementAccent
     accent: zombie
+  - type: FireVisuals
+    alternateState: Standing #TODO - custom visuals
   - type: UserInterface
     interfaces:
       enum.StrippingUiKey.Key:
