loadout torch, flint craft workbench

--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -305,6 +305,7 @@
   - CP14BaseSickle
   - CP14BasePickaxe
   - CP14Lighter
+  - CP14Torch
 
 - type: loadout
   id: CP14MagicHealingStaff
@@ -394,6 +395,12 @@
   storage:
     back:
     - CP14Lighter
+
+- type: loadout
+  id: CP14Torch
+  storage:
+    back:
+    - CP14Torch
 
 # Spells
 
