--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -49,17 +49,20 @@
       - id: CP14BaseWrench
         weight: 2
       - id: CP14Scissors
+      - id: CP14Torch
+      - id: CP14Lighter
       - id: CP14ManaOperationGlove
       - id: CP14BaseShovel
       - id: CP14BaseMop
       - id: CP14BaseBroom
       - id: CP14BasePickaxe
-      - id: CP14CrystalLampBlueEmpty
-      - id: CP14CrystalLampOrangeEmpty
+      - !type:GroupSelector
+        children:
+        - id: CP14CrystalLampBlueEmpty
+        - id: CP14CrystalLampOrangeEmpty
       - id: CP14Rope
       - id: CP14Nail10
       - id: CP14EnergyCrystalSmall
-      - id: CP14Lighter
       - id: CP14BaseSharpeningStone
       - !type:NestedSelector
         tableId: CP14RandomVials
