--- a/Resources/Audio/_CP14/Structures/attributions.yml
+++ b/Resources/Audio/_CP14/Structures/attributions.yml
@@ -1,5 +1,5 @@
 - files: ["doorknob_1.ogg"]
-  license: "Attribution 3.0"
+  license: ""CC-BY-3.0""
   copyright: 'by Leady.'
   source: "https://freesound.org/people/Leady/sounds/12739/"
 
