--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_wounds.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: CP14ActionSpellCureWounds
   name: Cure wounds
-  description: You touch the creature, healing its body from physical damage
+  description: You heal the target from physical damage
   components:
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
@@ -10,7 +10,7 @@
     speedMultiplier: 0.5
   - type: CP14MagicEffect
     magicType: Healing
-    manaCost: 20
+    manaCost: 10
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -29,9 +29,6 @@
             Piercing: -10
             Poison: -10
             Caustic: -10
-            Cold: -10
-            Heat: -10
-            Shock: -10
       - !type:Jitter
       - !type:ModifyBleedAmount
       - !type:ModifyBloodLevel
@@ -54,8 +51,8 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: cure_wounds
     event: !type:CP14DelayedEntityTargetActionEvent
-      cooldown: 10
-      castDelay: 3
+      cooldown: 5
+      castDelay: 1.5
       breakOnMove: false
  
 - type: entity
@@ -69,6 +66,9 @@
     layers:
     - state: sun
       color: "#79b330"
+      shader: unshaded
+    - state: double_outer
+      color: "#a1252f"
       shader: unshaded
 
 - type: entity
