--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
@@ -38,16 +38,18 @@
       collection: MetalThud
     cPAnimationLength: 0.3
     cPAnimationOffset: -1.3
-  #- type: CP14SpellStorageRequireAttune
-  #- type: CP14MagicAttuningItem
+  - type: CP14SpellStorageRequireAttune
+  - type: CP14MagicAttuningItem
   - type: CP14SpellStorageAccessHolding
   - type: CP14SpellStorage
     spells:
     - CP14ActionSpellCureWounds
+    - CP14ActionSpellCureBurn
+    - CP14ActionSpellBloodPurification
     - CP14ActionSpellResurrection
-  #- type: CP14MagicManacostModify
-  #  modifiers:
-  #   Healing: 1.1
+  - type: CP14MagicManacostModify
+    modifiers:
+     Healing: 1.4
   - type: CP14MagicEnergyExaminable
   - type: CP14MagicEnergyContainer
     energy: 80
