--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -412,6 +412,8 @@
   loadouts:
   - CP14ActionSpellFlameCreation
   - CP14ActionSpellCureWounds
+  - CP14ActionSpellCureBurn
+  - CP14ActionSpellBloodPurification
   - CP14ActionSpellSphereOfLight
   - CP14ActionSpellManaConsume
   - CP14ActionSpellManaGift
@@ -431,6 +433,19 @@
   dummyEntity: CP14ActionSpellCureWounds
   actions:
   - CP14ActionSpellCureWounds
+
+- type: loadout
+  id: CP14ActionSpellCureBurn
+  dummyEntity: CP14ActionSpellCureBurn
+  actions:
+  - CP14ActionSpellCureBurn
+
+
+- type: loadout
+  id: CP14ActionSpellBloodPurification
+  dummyEntity: CP14ActionSpellBloodPurification
+  actions:
+  - CP14ActionSpellBloodPurification
 
 - type: loadout
   id: CP14ActionSpellSphereOfLight
