--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_heat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_heat.yml
@@ -1,46 +1,38 @@
 - type: entity
-  id: CP14ActionSpellCureWounds
-  name: Cure wounds
-  description: You touch the creature, healing its body from physical damage
+  id: CP14ActionSpellCureBurn
+  name: Cure burn
+  description: You heal skin damage caused by excessive cooling or heating.
   components:
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
-    state: cure_wounds
+    state: cure_burn
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.5
   - type: CP14MagicEffect
     magicType: Healing
-    manaCost: 20
+    manaCost: 10
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectCureBurn
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectCureBurn
     - !type:CP14SpellApplyEntityEffect
       effects:
       - !type:HealthChange
         damage:
           types:
-            Slash: -10
-            Blunt: -10
-            Piercing: -10
-            Poison: -10
-            Caustic: -10
             Cold: -10
-            Heat: -10
+            Burn: -10
             Shock: -10
       - !type:Jitter
-      - !type:ModifyBleedAmount
-      - !type:ModifyBloodLevel
-        amount: 5
   - type: CP14MagicEffectVerbalAspect
-    startSpeech: "Et curabuntur..."
-    endSpeech: "vulnera tua"
+    startSpeech: "Pellis dolorem..."
+    endSpeech: "non novit"
   - type: CP14MagicEffectCastingVisual
-    proto: CP14RuneCureWounds
+    proto: CP14RuneCureBurn
   - type: EntityTargetAction
     whitelist:
       components:
@@ -52,14 +44,14 @@
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Effects/Magic/spells_icons.rsi
-      state: cure_wounds
+      state: cure_burn
     event: !type:CP14DelayedEntityTargetActionEvent
-      cooldown: 10
-      castDelay: 3
+      cooldown: 5
+      castDelay: 1.5
       breakOnMove: false
  
 - type: entity
-  id: CP14RuneCureWounds
+  id: CP14RuneCureBurn
   parent: CP14BaseMagicRune
   categories: [ HideSpawnMenu ]
   components:
@@ -70,9 +62,12 @@
     - state: sun
       color: "#79b330"
       shader: unshaded
+    - state: double_outer
+      color: "#ed9b4a"
+      shader: unshaded
 
 - type: entity
-  id: CP14ImpactEffectCureWounds
+  id: CP14ImpactEffectCureBurn
   parent: CP14BaseMagicImpact
   categories: [ HideSpawnMenu ]
   components:
@@ -84,9 +79,9 @@
 
 - type: entity
   parent: CP14BaseSpellScrollHealing
-  id: CP14SpellScrollCureWounds
-  name: cure wounds spell scroll
+  id: CP14SpellScrollCureBurn
+  name: cure burn spell scroll
   components:
   - type: CP14SpellStorage
     spells:
-    - CP14ActionSpellCureWounds
+    - CP14ActionSpellCureBurn
