--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_heat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T0_cure_heat.yml
@@ -25,7 +25,7 @@
         damage:
           types:
             Cold: -10
-            Burn: -10
+            Heat: -10
             Shock: -10
       - !type:Jitter
   - type: CP14MagicEffectVerbalAspect
