follow on use inhand

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
@@ -92,6 +92,7 @@
         - Opaque
   - type: LandAtCursor
   - type: MovementIgnoreGravity
+  - type: CP14FollowOnUseInHand
   - type: PointLight
     radius: 5.0
     energy: 1
